# pyKatsevich

./: .gitignore  Makefile  README.MD  debug_alpha_star.py  debug_hilbert.py  debug_interpolate_half.py  debug_td.py  debug_widx.py  environment_astra312.yml  find_pi_line_approximate.m  pyproject.toml  rows_condition.m  run.py  version.py
pykatsevich/: __init__.py  backproject.py  backproject_gpu.py  filter.py  geometry.py  initialize.py  pi_line.py  reconstruct.py
pykatsevich/backprojection/: BackProjection.py
pykatsevich_curve/: backprojection.py  backprojection_gpu.py  filter.py  initialize.py  reconstruct.py
reconstruction/: Main.py
reconstruction/Configuration/: Config.py
reconstruction/CoordinateSystem/: DetectorCoordinate.py  ImageCoordinate.py  SetupCoordinate.py  SourceCoordinate.py
reconstruction/Projection/: BackProject.c  BackProjection.py  CudaComputeDevice.cu  ForwardProject.c  ForwardProjection.py
reconstruction/Reconstruction/: FilteredBackprojection.py  ImageReconstruction.py  MLEM.py
reconstruction/TransformationMatrix/: ObjectSystemTransformation.py  SetTransformationMatrix.py
reconstruction/Utils/: SaveDICOM.py  SaveRaw.py  Saveconfig.py
reconstruction/Utils/Visualization/: RenderPointCloud.py  VisualizeSystem.py
tests/: Naeotom.py  Naeotom.yaml  Naeotom_curve.py  Naeotom_spine_10919.yaml  Naeotom_spine_4032.yaml  Naeotom_spine_curve.yaml  __init__.py  common.py  t01.py  t03.py  t04.py  test01.yaml  test02.yaml  test03.yaml  test04.yaml
