[project]
name = "pykatsevich"
version = "0.0.1"
authors = [
    { name="Pavel Paramonov", email="pavel.paramonov@uantwerpen.be"},
    { name="Femke Danckaers",  email="femke.danckaers@uantwerpen.be"}
]
description = "An implementation of Katsevich algorithm for helical CT"
readme="README.MD"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"